icon row overlap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ body {
 
 .icon-row {
   display: flex;
-  margin-top: 60px;
+  margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
   justify-content: center;
